added google analytics

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
     <%= javascript_include_tag "https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" %>
     <%= javascript_include_tag 'https://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js' %>
     <%= csrf_meta_tag %>
+    <%= analytics_init if Rails.env.production? %>
     <%= yield(:head) %>
   </head>
 <% if user_signed_in? %>
