unlink static_pages features list

--- a/app/assets/stylesheets/static_pages.css
+++ b/app/assets/stylesheets/static_pages.css
@@ -425,3 +425,9 @@ hr { display: none; }
 #footer a {
 	color: #A2CAD1;
 }
+
+.features {
+	color: #337884;
+	font-style: italic;
+	font-weight: 600;
+}
